[gd_scene load_steps=8 format=3 uid="uid://tfocysik80hq"]

[ext_resource type="PackedScene" uid="uid://cn0fgthdpdaxg" path="res://workshop/shatter/shard.tscn" id="1_s8l4l"]
[ext_resource type="Script" path="res://workshop/shatter/bottle_shatter.gd" id="1_ubb0r"]
[ext_resource type="PackedScene" uid="uid://xjuighokdi1k" path="res://workshop/shatter/cork.tscn" id="2_ao1us"]
[ext_resource type="AudioStream" uid="uid://dptdqdo3st2y4" path="res://workshop/shatter/Vial Shatter 1.wav" id="3_avefs"]
[ext_resource type="AudioStream" uid="uid://dre1aw0al1cmh" path="res://workshop/shatter/Vial Shatter 2.wav" id="4_xtx46"]
[ext_resource type="AudioStream" uid="uid://t4ahilskhdlw" path="res://workshop/shatter/Vial Shatter 3.wav" id="5_bq8nu"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ybfy7"]
streams_count = 3
stream_0/stream = ExtResource("3_avefs")
stream_1/stream = ExtResource("4_xtx46")
stream_2/stream = ExtResource("5_bq8nu")

[node name="BottleShatter" type="Node2D"]
script = ExtResource("1_ubb0r")

[node name="Cork" parent="." instance=ExtResource("2_ao1us")]

[node name="Shard1" parent="." instance=ExtResource("1_s8l4l")]

[node name="Shard2" parent="." instance=ExtResource("1_s8l4l")]

[node name="Shard3" parent="." instance=ExtResource("1_s8l4l")]

[node name="Shard4" parent="." instance=ExtResource("1_s8l4l")]

[node name="BreakSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ybfy7")
volume_db = -5.0
autoplay = true
